# src/rss_v2/api/schemas/__init__.py
@@ -68,6 +68,8 @@ from .messages import (
     MessageResponse,
     MessageVersionResponse,
     RelatedMessageResponse,
+    TaskClearFailedRequest,
+    TaskDeletionResponse,
     TaskListResponse,
     TaskResponse,
     TranslationResponse,
@@ -135,6 +137,8 @@ __all__ = [
     "SourceResponse",
     "SourceTestResponse",
     "TaskListResponse",
+    "TaskClearFailedRequest",
+    "TaskDeletionResponse",
     "TaskResponse",
     "TaskSettingItem",
     "TaskSettingResponse",
